# granulator

./: Cargo.toml
src/: coordinator.rs  grain.rs  input.rs  main.rs  output.rs  view.rs
