[package]
name = "granular"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
cpal = "0.14.2"
egui = "0.20"
eframe = "0.20.1"
rand = "0.8.5"
tokio = { version = "1.24.1", features = ["full"] }
rubato = "0.12"